--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 Django==1.9
+django-tinymce
+django-nested-inline
+django-markdown-deux
+django-filebrowser
+
 Pillow==2.3.0
 SecretStorage==2.0.0
 argparse==1.2.1
@@ -14,10 +19,10 @@ launchpadlib==1.10.2
 lazr.uri==1.0.3
 lockfile==0.8
 lpthw.web==1.1
-django-markdown-deux
+
 mercurial==2.8.2
 numpy==1.8.2
-django-nested-inline
+
 oauth==1.0.1
 paramiko==1.10.1
 pexpect==3.1
