added ckeditor variable to installation list

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ django-tinymce
 django-nested-inline
 django-markdown-deux
 django-filebrowser
+django-ckeditor
 
 Pillow==2.3.0
 SecretStorage==2.0.0
